--- a/style.css
+++ b/style.css
@@ -7,3 +7,19 @@
     margin: 0 auto;
 }
 
+/* Portfolio */
+.card-container {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+}
+
+.card-container .card {
+    margin: 5px;
+}
+
+@media (min-width:922px) {
+    .card-container .card {
+        flex-basis:30%;
+    }
+}
