--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
-/* Homepage */
-.homepage-cards {
+.card-container {
     display:flex;
-    justify-content: center;
-}
-.homepage-cards .card {
-    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content:center;
 }
 
+.card-container .card {
+    margin: 5px;
+}
+
+@media (min-width:922px) {
+    .card-container .card {
+        flex-basis:30%;
+    }
+}
+
+.full-width.btn {
+    width: 100%
+}
